Second refactor step and addition of APIGw 1101 template with new rules
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,20 @@
 {
   "workbench.colorTheme": "Tomorrow Night Blue",
   "cSpell.words": [
+    "buildx",
+    "dataserveweb",
+    "dbpass",
+    "diagnoser",
+    "envsubst",
+    "LNXAMD",
     "microdnf",
+    "pwsh",
     "Serverdiagnostic",
     "Serversecure",
+    "stty",
+    "urldecode",
+    "urlencode",
+    "urlencodepipe",
     "webmethods",
     "WMSCRIPT",
     "WMUI"
