--- a/09.utils/container-images/ubi/vm-emulator/Dockerfile
+++ b/09.utils/container-images/ubi/vm-emulator/Dockerfile
@@ -12,21 +12,26 @@ ARG __user_name=webmethods
 ARG __user_id=888
 ARG __group_name=webmethods
 ARG __group_id=888
+ARG __user_home=/home/${__user_name}
 
 # Usually for testing purposes we would declare these folders as volumes
+ARG __audit_home_dir=/app/webmethods/audit
 ARG __install_dir=/app/webmethods/version/products
 ARG __upd_mgr_home_dir=/app/webmethods/upd-mgr-v11
-ARG __audit_home_dir=/app/webmethods/audit
+
+# Usually these are also volumes, expected to be bind mounted
+
+ARG __script_dir=/mnt/scripts
 
 ENV WMUI_INSTALL_InstallDir=${__install_dir} \
     JAVA_HOME=${__install_dir}/jvm/jvm/ \
     JRE_HOME=${__install_dir}/jvm/jvm/jre/ \
-    WMUI_USER_HOME=/home/${__user_name} \
+    WMUI_USER_HOME=${__user_home} \
     WMUI_UPD_MGR_HOME=${__upd_mgr_home_dir} \
-    WMUI_LOCAL_SCRIPTS_HOME=/mnt/scripts \
-    WMUI_AUDIT_BASE_DIR=/app/audit
+    WMUI_LOCAL_SCRIPTS_HOME=${__script_dir} \
+    WMUI_AUDIT_BASE_DIR=${__audit_home_dir}
 
-RUN microdnf -y update ;\
+RUN microdnf -y update &&\
     microdnf -y install \
       findutils \
       gettext \
@@ -35,18 +40,22 @@ RUN microdnf -y update ;\
       shadow-utils \
       tar \
       which \
-      ;\
-    microdnf clean all ;\
-    rm -rf /var/cache/yum; \
-    /usr/sbin/groupadd -r -g ${__group_id} ${__group_name} ;\
-    /usr/sbin/useradd -r -u ${__user_id} -m -g ${__group_name} ${__user_name} ;\
-    mkdir -p "${WMUI_SUM_HOME}" "${WMUI_AUDIT_BASE_DIR}" \
-      "${__install_dir}" "${WMUI_LOCAL_SCRIPTS_HOME}" ;\
-    chown -R ${__user_name}:${__group_name} "${WMUI_LOCAL_SCRIPTS_HOME}" ;\
-    chown -R ${__user_name}:${__group_name} "${WMUI_SUM_HOME}" ;\
-    chown -R ${__user_name}:${__group_name} "${WMUI_AUDIT_BASE_DIR}" ;\
+      &&\
+    microdnf clean all &&\
+    rm -rf /var/cache/yum
+
+RUN /usr/sbin/groupadd -r -g ${__group_id} ${__group_name} &&\
+    /usr/sbin/useradd -r -u ${__user_id} -m -g ${__group_name} ${__user_name} &&\
+    mkdir -p \
+      "${__audit_home_dir}" \
+      "${__install_dir}" \
+      "${__script_dir}" \
+      "${__upd_mgr_home_dir}" &&\
+    chown -R ${__user_name}:${__group_name} "${__script_dir}" &&\
+    chown -R ${__user_name}:${__group_name} "${__upd_mgr_home_dir}" &&\
+    chown -R ${__user_name}:${__group_name} "${__audit_home_dir}" &&\
     chown -R ${__user_name}:${__group_name} "${__install_dir}"
 
-USER sag
+USER ${__user_name}
 
-# VOLUME /mnt/output
+VOLUME [ "${__audit_home_dir}", "${__install_dir}", "${__upd_mgr_home_dir}", "${__script_dir}", ${__user_home} ]
