--- a/09.utils/install-playground-ubi/EXAMPLE.env
+++ b/09.utils/install-playground-ubi/EXAMPLE.env
@@ -4,10 +4,15 @@
 
 ## Must tell where are the installation assets
 
-H_SUIF_INSTALLER_BIN=/path/to/installer.bin
-H_SUIF_SUM_BOOTSTRAP_BIN=/path/to/sum_boostrap.bin
-H_LICENSES_FOLDER=/path/to/your/licenses/folder
+H_WMUI_INSTALLER_BIN=../../local/artifacts/installer.bin
+H_WMUI_SUM_BOOTSTRAP_BIN=../../local/artifacts/upd-mgr-bootstrap.bin
+H_LICENSES_FOLDER=../../local/licenses/folder
 
 H_OUTPUT_FOLDER=./local
+H_WMUI_HOME=../..
 
-SUIF_INSTALL_INSTALL_DIR=/app/sag/version/products
+WMUI_AUDIT_HOME=/app/webmethods/audit
+WMUI_INSTALL_HOME=/app/webmethods/version/products
+WMUI_INSTALL_INSTALL_DIR=/app/webmethods/version/products
+WMUI_UPD_MGR_HOME=/app/upd-mgr-v11
+WMUI_USER_HOME=/app
