--- a/09.utils/install-playground-ubi/docker-compose.yml
+++ b/09.utils/install-playground-ubi/docker-compose.yml
@@ -1,43 +1,47 @@
 version: "3.5"
 
 volumes:
+  ipg1-audit-home: {}
   ipg1-install-home: {}
-  ipg1-sum-home: {}
+  ipg1-upd-mgr-home: {}
   ipg1-user-home: {}
-  ipg1-runs: {}
 services:
   ipg1:
     build:
-      context: ./build
+      context: ${H_WMUI_HOME}/09.utils/container-images/ubi/vm-emulator
       args:
-        - __install_dir=${SUIF_INSTALL_INSTALL_DIR}
-    image: install-playground-ubi-1
+        - __audit_home_dir=${WMUI_AUDIT_HOME}
+        - __install_dir=${WMUI_INSTALL_HOME}
+        - __install_dir=${WMUI_INSTALL_INSTALL_DIR}
+        - __upd_mgr_home_dir=${WMUI_UPD_MGR_HOME}
+        - __user_home=${WMUI_USER_HOME}
+    image: local/rhel-vm-emulator
     container_name: install-playground-ubi-1-1
     hostname: install-playground-ubi-1-1
     volumes:
       # the following must match the Dokerfile folders, otherwise permissions on FS will not work
-      - ipg1-install-home:${SUIF_INSTALL_INSTALL_DIR}
-      - ipg1-user-home:/home/sag/
-      - ipg1-sum-home:/app/sag/sumv11/
-      - ipg1-runs:/app/audit/
+      - ipg1-install-home:${WMUI_INSTALL_INSTALL_DIR}
+      - ipg1-user-home:${WMUI_USER_HOME}
+      - ipg1-upd-mgr-home:${WMUI_UPD_MGR_HOME}
+      - ipg1-audit-home:${WMUI_AUDIT_HOME}
       - ./scripts/:/mnt/scripts/
-      - ../../:/mnt/SUIF_HOME/
+      - ${H_WMUI_HOME}:/mnt/WMUI_HOME
       # These must be provided, they are prerequisites
       - ${H_LICENSES_FOLDER}/:/mnt/sag-licenses/
-      - ${H_SUIF_SUM_BOOTSTRAP_BIN}:/mnt/sum-bootstrap.bin
-      - ${H_SUIF_INSTALLER_BIN}:/mnt/installer.bin
+      - ${H_WMUI_SUM_BOOTSTRAP_BIN}:/mnt/upd-mgr-bootstrap.bin
+      - ${H_WMUI_INSTALLER_BIN}:/mnt/installer.bin
       - ${H_OUTPUT_FOLDER}:/mnt/output
     environment:
       # commonFunctions
-      - SUIF_DEBUG_ON=1
+      - WMUI_DEBUG_ON=1
       # this test runs online
-      - SUIF_ONLINE_MODE=1
-      - SUIF_HOME=/mnt/SUIF_HOME
-      - SUIF_AUDIT_BASE_DIR=/app/audit
+      - WMUI_ONLINE_MODE=1
+      - WMUI_HOME=/mnt/WMUI_HOME
+      - WMUI_AUDIT_BASE_DIR=${WMUI_AUDIT_HOME}
       # setupFunctions
-      - SUIF_INSTALL_INSTALLER_BIN=/tmp/installer.bin
-      - SUIF_INSTALL_INSTALL_DIR
-      - SUIF_PATCH_SUM_BOOTSTRAP_BIN=/tmp/sum-bootstrap.bin
-      - SUIF_SUM_HOME=/app/sag/sumv11/
+      - WMUI_INSTALL_INSTALLER_BIN=/tmp/installer.bin
+      - WMUI_INSTALL_INSTALL_DIR
+      - WMUI_PATCH_SUM_BOOTSTRAP_BIN=/tmp/upd-mgr-bootstrap.bin
+      - WMUI_UPD_MGR_HOME=${WMUI_UPD_MGR_HOME}
       # even when not using SPM, installer / update manager are spinning it up nonetheless
     entrypoint: /mnt/scripts/containerEntrypoint.sh
