Big step on refactor and installation test for API Gateway 11.1
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/09.utils/container-images/ubi/vm-emulator/Dockerfile
+++ b/09.utils/container-images/ubi/vm-emulator/Dockerfile
@@ -37,6 +37,7 @@ RUN microdnf -y update &&\
       gettext \
       gzip \
       less \
+      procps \
       shadow-utils \
       tar \
       which \
@@ -58,4 +59,5 @@ RUN /usr/sbin/groupadd -r -g ${__group_id} ${__group_name} &&\
 
 USER ${__user_name}
 
-VOLUME [ "${__audit_home_dir}", "${__install_dir}", "${__upd_mgr_home_dir}", "${__script_dir}", ${__user_home} ]
+# TODO: for some reason this declaration does not work when the image is built with docker compose build
+# VOLUME [ "${__audit_home_dir}", "${__install_dir}", "${__upd_mgr_home_dir}", "${__script_dir}", ${__user_home} ]
