--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,18 +5,24 @@
     "dataserveweb",
     "dbpass",
     "diagnoser",
+    "diagnosers",
     "envsubst",
     "LNXAMD",
     "microdnf",
+    "nofile",
     "pwsh",
     "Serverdiagnostic",
     "Serversecure",
+    "shunit",
+    "spro",
     "stty",
+    "ulimits",
     "urldecode",
     "urlencode",
     "urlencodepipe",
     "webmethods",
     "WMSCRIPT",
-    "WMUI"
+    "WMUI",
+    "WPID"
   ]
 }
