Successful test of APIGW 1101 default template and some installer ubi box quality fixes
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,28 @@
 {
   "workbench.colorTheme": "Tomorrow Night Blue",
   "cSpell.words": [
+    "apigatewayui",
     "buildx",
+    "Configurator",
+    "cpus",
+    "dashboardproxy",
     "dataserveweb",
     "dbpass",
     "diagnoser",
     "diagnosers",
+    "elasticvue",
     "envsubst",
+    "esdata",
+    "Glassfish",
+    "healthcheck",
+    "JAXB",
     "LNXAMD",
     "microdnf",
+    "microgateway",
     "nofile",
+    "procps",
     "pwsh",
+    "RDBMS",
     "Serverdiagnostic",
     "Serversecure",
     "shunit",
@@ -23,6 +35,7 @@
     "webmethods",
     "WMSCRIPT",
     "WMUI",
-    "WPID"
+    "WPID",
+    "xpack"
   ]
 }
