Added and tested DBC 11.1 template and post install for postgres
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "dashboardproxy",
     "dataserveweb",
     "dbpass",
+    "DBSERVER",
     "diagnoser",
     "diagnosers",
     "elasticvue",
@@ -20,6 +21,7 @@
     "microdnf",
     "microgateway",
     "nofile",
+    "pgsql",
     "procps",
     "pwsh",
     "RDBMS",
