Refined after some tests the harness for MSR 1101 selection-20250924
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
   "workbench.colorTheme": "Tomorrow Night Blue",
   "cSpell.words": [
+    "adduser",
     "apigatewayui",
+    "binutils",
+    "buildah",
     "buildx",
     "Configurator",
     "cpus",
@@ -17,10 +20,15 @@
     "Glassfish",
     "healthcheck",
     "JAXB",
+    "jdbc",
+    "jgss",
+    "jlink",
+    "jmods",
     "LNXAMD",
     "microdnf",
     "microgateway",
     "nofile",
+    "nologin",
     "pgsql",
     "procps",
     "pwsh",
