Added UM to Lab10
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/10.Labs/01.E2EM_Instana/EXAMPLE.env
+++ b/10.Labs/01.E2EM_Instana/EXAMPLE.env
@@ -1,18 +1,22 @@
-# By default, latest and smallest compatible image
-WMUI_TEST_POSTGRESQL_IMAGE=postgres:16-alpine3.22
-WMUI_TEST_PORT_PREFIX=458
+# Environment for Laboratory  End-to-end monitoring with Instana
 
-# Everything below may be left as is for the test purposes
-WMUI_TEST_LOCAL_SCRIPTS_HOME=/mnt/scripts
+## Global Impacting Variables
+WMUI_LAB10_PORT_PREFIX=481
+WMUI_LAB10_GUEST_SCRIPTS_MOUNT_POINT=/mnt/scripts
 
-# For Database
-WMUI_TEST_DBSERVER_HOSTNAME=postgresql-db-server
-WMUI_TEST_DBSERVER_DATABASE_NAME=postgres
-WMUI_TEST_DBSERVER_USER_NAME=postgres
-WMUI_TEST_DBSERVER_PASSWORD=postgres
-WMUI_TEST_DBSERVER_PORT=5432
+## Database
+WMUI_LAB10_POSTGRESQL_IMAGE=postgres:16-alpine3.22
+WMUI_LAB10_DBSERVER_HOSTNAME=postgresql-db-server
+WMUI_LAB10_DBSERVER_DATABASE_NAME=postgres
+WMUI_LAB10_DBSERVER_USER_NAME=postgres
+WMUI_LAB10_DBSERVER_PASSWORD=postgres
+WMUI_LAB10_DBSERVER_PORT=5432
 
-# For Database Configurator
-WMUI_TEST_DBC_IMAGE=dbc-1101-full-alpine-test-1
-WMUI_TEST_DBC_COMPONENT_NAME=All
-WMUI_TEST_DBC_COMPONENT_VERSION=latest
+## Database Configurator
+WMUI_LAB10_DBC_IMAGE=dbc-1101-full-alpine-test-1
+WMUI_LAB10_DBC_COMPONENT_NAME=All
+WMUI_LAB10_DBC_COMPONENT_VERSION=latest
+
+## Universal Messaging
+WMUI_LAB10_UM_IMAGE=cp.icr.io/cp/webmethods/universalmessaging/universalmessaging-server:11.1.2
+WMUI_LAB10_UM_REALM_NAME=lab10
