Refinement after tests on lab 10 with ESB vm 1
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "binutils",
     "buildah",
     "buildx",
+    "CLIENTPREFIX",
     "Configurator",
     "cpus",
     "dashboardproxy",
@@ -19,11 +20,13 @@
     "esdata",
     "Glassfish",
     "healthcheck",
+    "Instana",
     "JAXB",
     "jdbc",
     "jgss",
     "jlink",
     "jmods",
+    "jndi",
     "LNXAMD",
     "microdnf",
     "microgateway",
@@ -34,6 +37,7 @@
     "pwsh",
     "RDBMS",
     "Serverdiagnostic",
+    "serverlog",
     "Serversecure",
     "shunit",
     "spro",
