--- a/10.Labs/01.E2EM_Instana/EXAMPLE.env
+++ b/10.Labs/01.E2EM_Instana/EXAMPLE.env
@@ -1,8 +1,31 @@
 # Environment for Laboratory  End-to-end monitoring with Instana
 
+############# User MUST provide
+H_WMUI_HOME=../..
+H_WMUI_ESB_FIXES_IMAGE_PATH=${H_WMUI_HOME}/local/artifacts/fixes/MSR/1101/selection-20250924/25-09-24/fixes.zip
+H_WMUI_ESB_PRODUCTS_IMAGE_PATH=${H_WMUI_HOME}/local/artifacts/products/MSR/1101/selection-20250924/products.zip
+H_WMUI_INSTALLER_PATH=${H_WMUI_HOME}/local/artifacts/default-installer.bin
+H_WMUI_UPD_MGR_PATH=${H_WMUI_HOME}/local/artifacts/default-upd-mgr-bootstrap.bin
+
+WMUI_HOME=/app/WMUI
+WMUI_INSTALL_INSTALLER_BIN_MOUNT_POINT=/mnt/installer.bin
+WMUI_PATCH_AVAILABLE=1
+WMUI_PATCH_UPD_MGR_BOOTSTRAP_BIN_MOUNT_POINT=/mnt/upd-mgr-bootstrap.bin
+WMUI_WORK_DIR=/tmp/work
+
+############# Should not change
 ## Global Impacting Variables
+
 WMUI_LAB10_PORT_PREFIX=481
 WMUI_LAB10_GUEST_SCRIPTS_MOUNT_POINT=/mnt/scripts
+
+WMUI_DEBUG_ON=1
+WMUI_INSTALL_IMAGE_FILE=/mnt/products.zip
+WMUI_INSTALL_INSTALLER_BIN=${WMUI_WORK_DIR}/installer.bin
+WMUI_ONLINE_MODE=0
+WMUI_PATCH_FIXES_IMAGE_FILE=/mnt/fixes.zip
+WMUI_PATCH_UPD_MGR_BOOTSTRAP_BIN=${WMUI_WORK_DIR}/upd-mger-bootstrap.bin
+WMUI_SDC_ONLINE_MODE=0
 
 ## Database
 WMUI_LAB10_POSTGRESQL_IMAGE=postgres:16-alpine3.22
@@ -20,3 +43,15 @@ WMUI_LAB10_DBC_COMPONENT_VERSION=latest
 ## Universal Messaging
 WMUI_LAB10_UM_IMAGE=cp.icr.io/cp/webmethods/universalmessaging/universalmessaging-server:11.1.2
 WMUI_LAB10_UM_REALM_NAME=lab10
+WMUI_LAB10_UM_DATA_MOUNT_POINT=/opt/softwareag/UniversalMessaging/server/umserver/data
+WMUI_LAB10_UM_LOGS_MOUNT_POINT=/opt/softwareag/UniversalMessaging/server/umserver/logs
+
+## ESB
+WMUI_LAB10_ESB_AUDIT_MOUNT_POINT=/app/audit
+WMUI_LAB10_ESB_CONFIG_MOUNT_POINT=/app/config
+WMUI_LAB10_ESB_SCRIPTS_MOUNT_POINT=/app/scripts
+WMUI_LAB10_ESB_UPD_MGR_HOME_MOUNT_POINT=/app/upd-mgr
+WMUI_LAB10_ESB_USER_HOME_MOUNT_POINT=/app
+WMUI_LAB10_ESB_WM_HOME_MOUNT_POINT=/app/wm
+WMUI_WMSCRIPT_CDS_CONN_STRING=jdbc:wm:postgresql://${WMUI_LAB10_DBSERVER_HOSTNAME}:${WMUI_LAB10_DBSERVER_PORT};DatabaseName=${WMUI_LAB10_DBSERVER_DATABASE_NAME}
+
