Added APIGW to first lab
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/10.Labs/01.E2EM_Instana/docker-compose-init.yml
+++ b/10.Labs/01.E2EM_Instana/docker-compose-init.yml
@@ -41,7 +41,7 @@ services:
     volumes:
       - ./scripts/dbc:${WMUI_LAB10_GUEST_SCRIPTS_MOUNT_POINT}
     environment:
-      # for database configurator
+      # for database configurator - creates schemas for both MSR and API Gateway
       - WMUI_LAB10_DBSERVER_HOSTNAME
       - WMUI_LAB10_DBSERVER_DATABASE_NAME
       - WMUI_LAB10_DBSERVER_USER_NAME
