--- a/10.Labs/01.E2EM_Instana/EXAMPLE.env
+++ b/10.Labs/01.E2EM_Instana/EXAMPLE.env
@@ -4,6 +4,8 @@
 H_WMUI_HOME=../..
 H_WMUI_ESB_FIXES_IMAGE_PATH=${H_WMUI_HOME}/local/artifacts/fixes/MSR/1101/selection-20250924/25-09-24/fixes.zip
 H_WMUI_ESB_PRODUCTS_IMAGE_PATH=${H_WMUI_HOME}/local/artifacts/products/MSR/1101/selection-20250924/products.zip
+H_WMUI_APIGW_FIXES_IMAGE_PATH=${H_WMUI_HOME}/local/artifacts/fixes/APIGateway/1101/cds-e2e-postgres/25-09-23/fixes.zip
+H_WMUI_APIGW_PRODUCTS_IMAGE_PATH=${H_WMUI_HOME}/local/artifacts/products/APIGateway/1101/cds-e2e-postgres/products.zip
 H_WMUI_INSTALLER_PATH=${H_WMUI_HOME}/local/artifacts/default-installer.bin
 H_WMUI_UPD_MGR_PATH=${H_WMUI_HOME}/local/artifacts/default-upd-mgr-bootstrap.bin
 
@@ -53,5 +55,20 @@ WMUI_LAB10_ESB_SCRIPTS_MOUNT_POINT=/app/scripts
 WMUI_LAB10_ESB_UPD_MGR_HOME_MOUNT_POINT=/app/upd-mgr
 WMUI_LAB10_ESB_USER_HOME_MOUNT_POINT=/app
 WMUI_LAB10_ESB_WM_HOME_MOUNT_POINT=/app/wm
+WMUI_LAB10_ESB_APP_PROPS_MOUNT_POINT=/app/config/application.properties
 WMUI_WMSCRIPT_CDS_CONN_STRING=jdbc:wm:postgresql://${WMUI_LAB10_DBSERVER_HOSTNAME}:${WMUI_LAB10_DBSERVER_PORT};DatabaseName=${WMUI_LAB10_DBSERVER_DATABASE_NAME}
+
+## API Gateway
+WMUI_LAB10_APIGW_AUDIT_MOUNT_POINT=/app/audit
+WMUI_LAB10_APIGW_CONFIG_MOUNT_POINT=/app/config
+WMUI_LAB10_APIGW_SCRIPTS_MOUNT_POINT=/app/scripts
+WMUI_LAB10_APIGW_UPD_MGR_HOME_MOUNT_POINT=/app/upd-mgr
+WMUI_LAB10_APIGW_USER_HOME_MOUNT_POINT=/app
+WMUI_LAB10_APIGW_WM_HOME_MOUNT_POINT=/app/wm
+WMUI_LAB10_APIGW_APP_PROPS_MOUNT_POINT=/app/config/application.properties
+
+## ELK Stack configuration
+WMUI_LAB10_ELK_VERSION=8.17.3
+WMUI_LAB10_ELASTIC_USERNAME=notelastic
+WMUI_LAB10_ELASTIC_PASSWORD=rwhkfjfweiuywgeu435
 
