--- a/10.Labs/01.E2EM_Instana/docker-compose.yml
+++ b/10.Labs/01.E2EM_Instana/docker-compose.yml
@@ -6,6 +6,11 @@ volumes:
   esb-vm1-user-home: {}
   esb-vm1-wm-home: {}
   esb-vm1-upd-mgr-home: {}
+  apigw-vm1-audit: {}
+  apigw-vm1-user-home: {}
+  apigw-vm1-wm-home: {}
+  apigw-vm1-upd-mgr-home: {}
+  esdata: {}
 networks:
     n1:
       external: false
@@ -120,3 +125,150 @@ services:
       um:
         condition: service_healthy
     entrypoint: ${WMUI_LAB10_ESB_SCRIPTS_MOUNT_POINT}/containerEntrypoint.sh
+
+  apigateway:
+    build:
+      context: ${H_WMUI_HOME}/09.utils/container-images/ubi/vm-emulator
+      args:
+        - __audit_home_dir=${WMUI_LAB10_APIGW_AUDIT_MOUNT_POINT}
+        - __install_dir=${WMUI_LAB10_APIGW_WM_HOME_MOUNT_POINT}
+        - __upd_mgr_home_dir=${WMUI_LAB10_APIGW_UPD_MGR_HOME_MOUNT_POINT}
+        - __user_home=${WMUI_LAB10_APIGW_USER_HOME_MOUNT_POINT}
+    image: lab10-api-gw-vm-1
+    container_name: lab10-api-gw-vm-1
+    hostname: lab10-api-gw-vm-1
+    ulimits:
+      nproc: 4096
+      nofile: 65536
+    volumes:
+      - ./config/api-gw-vm1/:${WMUI_LAB10_APIGW_CONFIG_MOUNT_POINT}
+      - ./scripts/api-gw-vm1/:${WMUI_LAB10_APIGW_SCRIPTS_MOUNT_POINT}
+      - ./config/api-gw-vm1/application.properties:${WMUI_LAB10_APIGW_APP_PROPS_MOUNT_POINT}
+      - ${H_WMUI_HOME}:${WMUI_HOME}
+      - apigw-vm1-audit:${WMUI_LAB10_APIGW_AUDIT_MOUNT_POINT}
+      - apigw-vm1-upd-mgr-home:${WMUI_LAB10_APIGW_UPD_MGR_HOME_MOUNT_POINT}
+      - apigw-vm1-user-home:${WMUI_LAB10_APIGW_USER_HOME_MOUNT_POINT}
+      - apigw-vm1-wm-home:${WMUI_LAB10_APIGW_WM_HOME_MOUNT_POINT}
+      - ${H_WMUI_INSTALLER_PATH}:${WMUI_INSTALL_INSTALLER_BIN_MOUNT_POINT}
+      - ${H_WMUI_UPD_MGR_PATH}:${WMUI_PATCH_UPD_MGR_BOOTSTRAP_BIN_MOUNT_POINT}
+      - ${H_WMUI_APIGW_PRODUCTS_IMAGE_PATH}:${WMUI_INSTALL_IMAGE_FILE}
+      - ${H_WMUI_APIGW_FIXES_IMAGE_PATH}:${WMUI_PATCH_FIXES_IMAGE_FILE}
+    environment:
+      - SAG_IS_CONFIG_PROPERTIES=${WMUI_LAB10_APIGW_APP_PROPS_MOUNT_POINT}
+      # setup parameters
+      - WMUI_AUDIT_BASE_DIR=${WMUI_LAB10_APIGW_AUDIT_MOUNT_POINT}
+      - WMUI_DEBUG_ON
+      - WMUI_HOME
+      - WMUI_INSTALL_IMAGE_FILE
+      - WMUI_INSTALL_INSTALL_DIR=${WMUI_LAB10_APIGW_WM_HOME_MOUNT_POINT}
+      - WMUI_INSTALL_INSTALLER_BIN
+      - WMUI_INSTALL_INSTALLER_BIN_MOUNT_POINT
+      - WMUI_LAB10_PORT_PREFIX
+      - WMUI_ONLINE_MODE
+      - WMUI_PATCH_AVAILABLE
+      - WMUI_PATCH_FIXES_IMAGE_FILE
+      - WMUI_PATCH_UPD_MGR_BOOTSTRAP_BIN
+      - WMUI_PATCH_UPD_MGR_BOOTSTRAP_BIN_MOUNT_POINT
+      - WMUI_SDC_ONLINE_MODE
+      - WMUI_UPD_MGR_HOME=${WMUI_LAB10_APIGW_UPD_MGR_HOME_MOUNT_POINT}
+      - WMUI_WORK_DIR
+      # database parameters
+      - WMUI_LAB10_POSTGRESQL_IMAGE
+      - WMUI_LAB10_DBSERVER_HOSTNAME
+      - WMUI_LAB10_DBSERVER_DATABASE_NAME
+      - WMUI_LAB10_DBSERVER_USER_NAME
+      - WMUI_LAB10_DBSERVER_PASSWORD
+      - WMUI_LAB10_DBSERVER_PORT
+      # CDS setup variables
+      - WMUI_WMSCRIPT_CDS_DB_PASSWORD=${WMUI_LAB10_DBSERVER_PASSWORD}
+      - WMUI_WMSCRIPT_CDS_DB_USER=${WMUI_LAB10_DBSERVER_USER_NAME}
+      - WMUI_WMSCRIPT_CDS_CONN_STRING
+      # Elasticsearch configuration
+      - apigw_elasticsearch_hosts=core-elasticsearch:9200
+      - apigw_elasticsearch_https_enabled=false
+      - apigw_elasticsearch_http_username=${WMUI_LAB10_ELASTIC_USERNAME}
+      - apigw_elasticsearch_http_password=${WMUI_LAB10_ELASTIC_PASSWORD}
+      # external kibana
+      - apigw_kibana_dashboardInstance=http://host.docker.internal:${WMUI_LAB10_PORT_PREFIX}56
+    ports:
+      - "${WMUI_LAB10_PORT_PREFIX}73:9073"
+      - "${WMUI_LAB10_PORT_PREFIX}72:9072"
+      - "${WMUI_LAB10_PORT_PREFIX}55:5555"
+    networks:
+      - n1
+    depends_on:
+      db:
+        condition: service_healthy
+      core-elasticsearch:
+        condition: service_healthy
+    entrypoint: ${WMUI_LAB10_APIGW_SCRIPTS_MOUNT_POINT}/containerEntrypoint.sh
+    healthcheck:
+      interval: 10s
+      retries: 200
+      test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:5555/rest/apigateway/health
+
+  core-elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:${WMUI_LAB10_ELK_VERSION}
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - http.cors.allow-headers=X-Requested-With,Content-Type,Content-Length,Authorization
+      - http.cors.enabled=true
+      - http.cors.allow-origin=/.*/
+      - ELASTIC_USERNAME=${WMUI_LAB10_ELASTIC_USERNAME}
+      - ELASTIC_PASSWORD=${WMUI_LAB10_ELASTIC_PASSWORD}
+    ports:
+      - ${WMUI_LAB10_PORT_PREFIX}20:9200
+    networks:
+      - n1
+    mem_reservation: 1g 
+    mem_limit: 1g
+    cpus: 1
+    ulimits:
+      nofile:
+        soft: 65536
+        hard: 65536
+    healthcheck:
+      interval: 20s
+      retries: 10
+      test: curl -s http://localhost:9200/_cluster/health | grep -vq '"status":"red"'
+  
+  elasticvue:
+    image: cars10/elasticvue
+    ports:
+      - "${WMUI_LAB10_PORT_PREFIX}81:8080"
+    networks:
+      - n1
+    depends_on:
+      core-elasticsearch:
+        condition: service_healthy
+    mem_reservation: 100m
+    mem_limit: 500m
+    cpus: 1
+  
+  core-kibana:
+    image: docker.elastic.co/kibana/kibana:${WMUI_LAB10_ELK_VERSION}
+    depends_on:
+      apigateway:
+        condition: service_healthy
+    environment:
+      - ELASTICSEARCH_URL=http://core-elasticsearch:9200
+      - ELASTICSEARCH_HOSTS=http://core-elasticsearch:9200
+      - KIBANA_EXTERNAL_HOSTNAME=http://host.docker.internal:${WMUI_LAB10_PORT_PREFIX}56
+      - ELASTICSEARCH_USERNAME=${WMUI_LAB10_ELASTIC_USERNAME}
+      - ELASTICSEARCH_PASSWORD=${WMUI_LAB10_ELASTIC_PASSWORD}
+      - SERVER_BASEPATH=/apigatewayui/dashboardproxy
+      - CONSOLE_ENABLED=false
+    ports:
+      - ${WMUI_LAB10_PORT_PREFIX}56:5601
+    networks:
+      - n1
+    healthcheck:
+      interval: 10s
+      retries: 400
+      test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:5601/api/status
+    mem_reservation: 200m
+    mem_limit: 1g
+    cpus: 1
