Added E2EM component config on the first lab. To test.
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/10.Labs/01.E2EM_Instana/EXAMPLE.env
+++ b/10.Labs/01.E2EM_Instana/EXAMPLE.env
@@ -72,3 +72,16 @@ WMUI_LAB10_ELK_VERSION=8.17.3
 WMUI_LAB10_ELASTIC_USERNAME=notelastic
 WMUI_LAB10_ELASTIC_PASSWORD=rwhkfjfweiuywgeu435
 
+## E2EM agent configuration
+# We only want local forward, not cloud
+SW_AGENT_COLLECTOR_ESTABLISH_CLOUD_COMMUNICATION=false
+SW_AGENT_EXTERNAL_ESTABLISH_COMMUNICATION=true
+SW_AGENT_EXTERNAL_TARGET=apm
+SW_AGENT_EXTERNAL_TARGET_NAME=Instana1
+SW_AGENT_OTEL_ENDPOINT=https://<otlp_endpoint>/v1/traces
+SW_AGENT_OTEL_HEADERS=api-key#value,Content-Type#application/x-protobuf
+SW_AGENT_EXT_SYSTEM_USER=
+SW_AGENT_EXT_SYSTEM_PASSWORD=
+SW_AGENT_EXTERNAL_SUPPORT_LONG_ID=false
+#SW_AGENT_EXTERNAL_API_ERROR_CODES=502,503,504
+#SW_AGENT_OTEL_RESOURCE_ATTRIBUTES=service.name#example_service, service.namespace#example_service_namespace
