--- a/10.Labs/01.E2EM_Instana/docker-compose.yml
+++ b/10.Labs/01.E2EM_Instana/docker-compose.yml
@@ -116,6 +116,16 @@ services:
       - WMUI_WMSCRIPT_CDS_DB_PASSWORD=${WMUI_LAB10_DBSERVER_PASSWORD}
       - WMUI_WMSCRIPT_CDS_DB_USER=${WMUI_LAB10_DBSERVER_USER_NAME}
       - WMUI_WMSCRIPT_CDS_CONN_STRING
+      # E2EM variables
+      - SW_AGENT_COLLECTOR_ESTABLISH_CLOUD_COMMUNICATION
+      - SW_AGENT_EXTERNAL_ESTABLISH_COMMUNICATION
+      - SW_AGENT_EXTERNAL_TARGET
+      - SW_AGENT_EXTERNAL_TARGET_NAME
+      - SW_AGENT_OTEL_ENDPOINT
+      - SW_AGENT_OTEL_HEADERS
+      - SW_AGENT_EXT_SYSTEM_USER
+      - SW_AGENT_EXT_SYSTEM_PASSWORD
+      - SW_AGENT_EXTERNAL_SUPPORT_LONG_ID
     ports:
       - "${WMUI_LAB10_PORT_PREFIX}53:5543"
       - "${WMUI_LAB10_PORT_PREFIX}55:5555"
@@ -190,6 +200,17 @@ services:
       - apigw_elasticsearch_http_password=${WMUI_LAB10_ELASTIC_PASSWORD}
       # external kibana
       - apigw_kibana_dashboardInstance=http://host.docker.internal:${WMUI_LAB10_PORT_PREFIX}56
+      # E2EM variables
+      - SW_AGENT_COLLECTOR_ESTABLISH_CLOUD_COMMUNICATION
+      - SW_AGENT_EXTERNAL_ESTABLISH_COMMUNICATION
+      - SW_AGENT_EXTERNAL_TARGET
+      - SW_AGENT_EXTERNAL_TARGET_NAME
+      - SW_AGENT_OTEL_ENDPOINT
+      - SW_AGENT_OTEL_HEADERS
+      - SW_AGENT_EXT_SYSTEM_USER
+      - SW_AGENT_EXT_SYSTEM_PASSWORD
+      - SW_AGENT_EXTERNAL_SUPPORT_LONG_ID
+
     ports:
       - "${WMUI_LAB10_PORT_PREFIX}73:9073"
       - "${WMUI_LAB10_PORT_PREFIX}72:9072"
