--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "DBSERVER",
     "diagnoser",
     "diagnosers",
+    "ecustomlogback",
     "elasticvue",
     "envsubst",
     "esdata",
@@ -34,6 +35,7 @@
     "nofile",
     "nohup",
     "nologin",
+    "onpremise",
     "pgsql",
     "procps",
     "pwsh",
