refining the first lab
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/10.Labs/01.E2EM_Instana/EXAMPLE.env
+++ b/10.Labs/01.E2EM_Instana/EXAMPLE.env
@@ -19,6 +19,7 @@ WMUI_WORK_DIR=/tmp/work
 ## Global Impacting Variables
 
 WMUI_LAB10_PORT_PREFIX=481
+WMUI_LAB10_HOST_NAME=host.docker.internal
 WMUI_LAB10_GUEST_SCRIPTS_MOUNT_POINT=/mnt/scripts
 
 WMUI_DEBUG_ON=1
@@ -66,6 +67,7 @@ WMUI_LAB10_APIGW_UPD_MGR_HOME_MOUNT_POINT=/app/upd-mgr
 WMUI_LAB10_APIGW_USER_HOME_MOUNT_POINT=/app
 WMUI_LAB10_APIGW_WM_HOME_MOUNT_POINT=/app/wm
 WMUI_LAB10_APIGW_APP_PROPS_MOUNT_POINT=/app/config/application.properties
+WMUI_LAB10_APIGW_KIBANA_BASE_URL=http://${WMUI_LAB10_HOST_NAME}:${WMUI_LAB10_PORT_PREFIX}56
 
 ## ELK Stack configuration
 WMUI_LAB10_ELK_VERSION=8.17.3
