Small refinement for running under RH
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/10.Labs/01.E2EM_Instana/docker-compose-init.yml
+++ b/10.Labs/01.E2EM_Instana/docker-compose-init.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - POSTGRES_USER=${WMUI_LAB10_DBSERVER_USER_NAME}
       - POSTGRES_PASSWORD=${WMUI_LAB10_DBSERVER_PASSWORD}
+      - WMUI_LAB10_HOST_NAME
     networks:
       n1:
         aliases:
