added in Lab 01 EXAMPLE.env the new switch for E2EM agent on API GW
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/10.Labs/01.E2EM_Instana/EXAMPLE.env
+++ b/10.Labs/01.E2EM_Instana/EXAMPLE.env
@@ -68,6 +68,7 @@ WMUI_LAB01_APIGW_USER_HOME_MOUNT_POINT=/app
 WMUI_LAB01_APIGW_WM_HOME_MOUNT_POINT=/app/wm
 WMUI_LAB01_APIGW_APP_PROPS_MOUNT_POINT=/app/config/application.properties
 WMUI_LAB01_APIGW_KIBANA_BASE_URL=http://${WMUI_LAB01_HOST_NAME}:${WMUI_LAB01_PORT_PREFIX}56
+WMUI_LAB01_APIGW_ENABLE_E2EM_AGENT=false
 
 ## ELK Stack configuration
 WMUI_LAB01_ELK_VERSION=8.17.3
