Added debug log level for E2E monitor
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/10.Labs/01.E2EM_Instana/docker-compose.yml
+++ b/10.Labs/01.E2EM_Instana/docker-compose.yml
@@ -133,6 +133,7 @@ services:
       - SW_AGENT_EXTERNAL_SUPPORT_LONG_ID
       - WMUI_LAB01_HOST_NAME
       - JAVA_MAX_MEM=384M
+      - SW_LOGGING_LEVEL
     ports:
       - "${WMUI_LAB01_PORT_PREFIX}53:5543"
       - "${WMUI_LAB01_PORT_PREFIX}55:5555"
@@ -223,6 +224,7 @@ services:
       - WMUI_LAB01_HOST_NAME
       - JAVA_MAX_MEM=512M
       - WMUI_LAB01_APIGW_ENABLE_E2EM_AGENT
+      - SW_LOGGING_LEVEL
     ports:
       - "${WMUI_LAB01_PORT_PREFIX}73:9073"
       - "${WMUI_LAB01_PORT_PREFIX}72:9072"
