Added ESB packages for traffic generation
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/10.Labs/01.E2EM_Instana/EXAMPLE.env
+++ b/10.Labs/01.E2EM_Instana/EXAMPLE.env
@@ -50,9 +50,12 @@ WMUI_LAB01_UM_DATA_MOUNT_POINT=/opt/softwareag/UniversalMessaging/server/umserve
 WMUI_LAB01_UM_LOGS_MOUNT_POINT=/opt/softwareag/UniversalMessaging/server/umserver/logs
 
 ## ESB
+H_WMUI_LAB01_PUB_SUB_MON_01_REPO_HOME=../../../5s-pub-sub-with-mon-01
 WMUI_LAB01_ESB_APP_PROPS_MOUNT_POINT=/mnt/application.properties
 WMUI_LAB01_ESB_AUDIT_MOUNT_POINT=/app/audit
 WMUI_LAB01_ESB_CONFIG_MOUNT_POINT=/app/config
+WMUI_LAB01_ESB_COPY_PUB_SUB_MON_PACKAGES=true
+WMUI_LAB01_PUB_SUB_MON_01_REPO_MOUNT_POINT=/mnt/5s-pub-sub-with-mon-01
 WMUI_LAB01_ESB_SCRIPTS_MOUNT_POINT=/app/scripts
 WMUI_LAB01_ESB_UPD_MGR_HOME_MOUNT_POINT=/app/upd-mgr
 WMUI_LAB01_ESB_USER_HOME_MOUNT_POINT=/app
