--- a/10.Labs/01.E2EM_Instana/docker-compose.yml
+++ b/10.Labs/01.E2EM_Instana/docker-compose.yml
@@ -91,6 +91,7 @@ services:
       - ${H_WMUI_UPD_MGR_PATH}:${WMUI_PATCH_UPD_MGR_BOOTSTRAP_BIN_MOUNT_POINT}
       - ${H_WMUI_ESB_PRODUCTS_IMAGE_PATH}:${WMUI_INSTALL_IMAGE_FILE}
       - ${H_WMUI_ESB_FIXES_IMAGE_PATH}:${WMUI_PATCH_FIXES_IMAGE_FILE}
+      - ${H_WMUI_LAB01_PUB_SUB_MON_01_REPO_HOME}:${WMUI_LAB01_PUB_SUB_MON_01_REPO_MOUNT_POINT}
     environment:
       - SAG_IS_CONFIG_PROPERTIES=${WMUI_LAB01_ESB_APP_PROPS_MOUNT_POINT}
       # setup parameters
@@ -134,6 +135,9 @@ services:
       - WMUI_LAB01_HOST_NAME
       - JAVA_MAX_MEM=384M
       - SW_LOGGING_LEVEL
+      ## Application level
+      - WMUI_LAB01_PUB_SUB_MON_01_REPO_MOUNT_POINT
+      - WMUI_LAB01_ESB_COPY_PUB_SUB_MON_PACKAGES
     ports:
       - "${WMUI_LAB01_PORT_PREFIX}53:5543"
       - "${WMUI_LAB01_PORT_PREFIX}55:5555"
