Added two global variables needed for the test
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/10.Labs/01.E2EM_Instana/config/esb-vm1/application.properties
+++ b/10.Labs/01.E2EM_Instana/config/esb-vm1/application.properties
@@ -38,3 +38,7 @@ jdbcfunc.ISCoreAudit.connPoolAlias=pgsql
 jdbcfunc.ISDashboardsStats.connPoolAlias=pgsql
 jdbcfunc.ProcessAudit.connPoolAlias=pgsql
 jdbcfunc.Xref.connPoolAlias=pgsql
+
+## Demo switches
+globalvariable.sleepMillisAtMessageConsumeTime.value=300
+globalvariable.retryProbability.value=.5
