--- a/10.Labs/01.E2EM_Instana/config/esb-vm1/application.properties
+++ b/10.Labs/01.E2EM_Instana/config/esb-vm1/application.properties
@@ -8,22 +8,22 @@ settings.watt.server.audit.logFilesToKeep=1
 settings.watt.server.serverlogFilesToKeep=1
 settings.watt.server.stats.logFilesToKeep=1
 ## Part 1 - webMethods messaging
-messaging.UM01.description=Configured UM connection
-messaging.UM01.CLIENTPREFIX=LAB01-esb-vm1
-messaging.UM01.isClientPrefixShared=true
-messaging.UM01.url=nsp://um:9000
-messaging.UM01.useCSQ=false
-messaging.UM01.csqSize=0
-messaging.UM01.csqDrainInOrder=true
-messaging.UM01.um_publishWaitTime=30000
-messaging.UM01.um_loggingOutput=0
-messaging.UM01.default=true
-messaging.UM01.type=UM
-messaging.UM01.enabled=true
+messaging.DEMO_UM.description=Configured UM connection
+messaging.DEMO_UM.CLIENTPREFIX=LAB01-esb-vm1
+messaging.DEMO_UM.isClientPrefixShared=true
+messaging.DEMO_UM.url=nsp://um:9000
+messaging.DEMO_UM.useCSQ=false
+messaging.DEMO_UM.csqSize=0
+messaging.DEMO_UM.csqDrainInOrder=true
+messaging.DEMO_UM.um_publishWaitTime=30000
+messaging.DEMO_UM.um_loggingOutput=0
+messaging.DEMO_UM.default=true
+messaging.DEMO_UM.type=UM
+messaging.DEMO_UM.enabled=true
 ## Part 2 - JNDI
-jndi.um01.initialContextFactory=com.pcbsys.nirvana.nSpace.NirvanaContextFactory
-jndi.um01.providerURL=nsp://um:9000
-jms.um01.jndi_jndiAliasName=LAB01um
+jndi.DEMO_UM.initialContextFactory=com.pcbsys.nirvana.nSpace.NirvanaContextFactory
+jndi.DEMO_UM.providerURL=nsp://um:9000
+jms.DEMO_UM.jndi_jndiAliasName=LAB01um
 # Part 3 - JDBC Pools
 ## pgsql pool
 jdbc.pgsql.dbURL=jdbc\:wm\:postgresql\://$env{WMUI_LAB01_DBSERVER_HOSTNAME}\:$env{WMUI_LAB01_DBSERVER_PORT};databaseName\=$env{WMUI_LAB01_DBSERVER_DATABASE_NAME}
