Added otel collector to lab01 for tracing
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,12 +31,14 @@
     "jmods",
     "jndi",
     "LNXAMD",
+    "loglevel",
     "microdnf",
     "microgateway",
     "nofile",
     "nohup",
     "nologin",
     "onpremise",
+    "otelc",
     "pgsql",
     "procps",
     "pwsh",
