--- a/10.Labs/01.E2EM_Instana/EXAMPLE.env
+++ b/10.Labs/01.E2EM_Instana/EXAMPLE.env
@@ -84,7 +84,7 @@ SW_AGENT_COLLECTOR_ESTABLISH_CLOUD_COMMUNICATION=false
 SW_AGENT_EXTERNAL_ESTABLISH_COMMUNICATION=true
 SW_AGENT_EXTERNAL_TARGET=apm
 SW_AGENT_EXTERNAL_TARGET_NAME=Instana1
-SW_AGENT_OTEL_ENDPOINT=https://<otlp_endpoint>/v1/traces
+SW_AGENT_OTEL_ENDPOINT=http://otelc:4318/v1/traces
 SW_AGENT_OTEL_HEADERS=api-key#value,Content-Type#application/x-protobuf
 SW_AGENT_EXT_SYSTEM_USER=
 SW_AGENT_EXT_SYSTEM_PASSWORD=
